<resources>
    <string name="app_name">SwimClock</string>
    <string name="title_home">Mesh</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_settings">Settings</string>

    <string name="networks_empty">No Networks created. Press the button below to create your first network</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_delete_network">pref_key_network_key</string>
    <string name="pref_scan_timeout">pref_scan_timeout</string>
    <string name="show_devices">Show Devices</string>
    <string name="scan_and_provision">Scan and Provision</string>
    <string name="add_to_this_network">No device in network, provision your first device and add to this network</string>
    <string name="devices">Devices</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="create_network">Create Network</string>
    <string name="show_groups">Show Groups</string>
    <string name="add_remove_to_group">Add/Remove to Group</string>
    <string name="factory_reset">Factory Reset</string>
    <string name="group_action">Action</string>
    <string name="power">Power</string>
    <string name="reset">Reset</string>
    <string name="real_time">Real Time</string>
    <string name="set">+Set</string>
    <string name="ladder">Ladder</string>
    <string name="pause">START</string>
    <string name="clock">Clock</string>
    <string name="practice">Practice</string>
    <string name="buzzer">Buzzer</string>
    <string name="_3sync">3 SYNC</string>
    <string name="_4sync">4 SYNC</string>
</resources>
