<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".clock.PaceFragment">


    <LinearLayout
        android:id="@+id/btn_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_rounded_corners"
            android:elevation="8dp"
            android:text="@string/reset"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/real_time_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_rounded_corners"
            android:elevation="8dp"
            android:text="@string/real_time"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ladder_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_rounded_corners"
            android:elevation="8dp"
            android:text="@string/ladder"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTimeBackground"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <in.hedera.reku.swimclock.utils.Chronometer
            android:id="@+id/timeview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="--:--.--"
            android:textColor="@android:color/white"
            android:textSize="42sp"
            android:textStyle="bold"
            tools:text="0:28.25" />

        <Button
            android:id="@+id/time_pause"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_below="@+id/timeview"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:elevation="8dp"
            android:text="@string/pause"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>