<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <ProgressBar
        android:id="@+id/progress_bar_nw"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/empty_nw_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        tools:visibility="gone">

        <TextView
            android:id="@+id/msg_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/networks_empty"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <Button
            android:id="@+id/create-nw-button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="5dp"
            android:text="@string/create_network" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/network_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/network_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/network_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Network Name" />

                <TextView
                    android:id="@+id/device_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="18dp"
                    android:text="@string/devices" />

                <TextView
                    android:id="@+id/device_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="12dp"
                    android:layout_toStartOf="@+id/device_label"
                    android:textStyle="bold"
                    tools:text="0" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <RadioGroup
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:checkedButton="@+id/toggle_devices"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/toggle_devices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Devices" />

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/toggle_groups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Groups" />
        </RadioGroup>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/home-devices-list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone" >

        </android.support.v7.widget.RecyclerView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/home-group-list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone">
        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/group_list_emptyview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_to_this_network"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Button
                android:id="@+id/scan_provision_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_and_provision" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
