<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/btn_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_rounded_corners"
            android:elevation="8dp"
            android:text="@string/reset"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/real_time_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_rounded_corners"
            android:elevation="8dp"
            android:text="@string/real_time"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/set_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_rounded_corners"
            android:elevation="8dp"
            android:text="@string/set"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ladder_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_rounded_corners"
            android:elevation="8dp"
            android:text="@string/ladder"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:text="Lap Direction"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/lap_label_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/num_label"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="No."
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rep_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="# of Rep"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/interval_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="Interval"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/add_rep_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:background="@drawable/ic_add_black_24dp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rep_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/rep_interval_item" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTimeBackground">

        <TextView
            android:id="@+id/timeview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="--:--.--"
            android:textColor="@android:color/white"
            android:textSize="42sp"
            android:textStyle="bold"
            tools:text="0:28.25" />

        <TextView
            android:id="@+id/rep_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/time_pause"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:text="[1] - 1" />

        <Button
            android:id="@+id/time_pause"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_below="@+id/timeview"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:elevation="8dp"
            android:text="@string/pause"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/lap_up_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_above="@+id/time_pause"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/menu_up"
            android:elevation="8dp"
            android:scaleType="fitXY"
            android:scaleX="1.5"
            android:scaleY="1.5" />

        <ImageButton
            android:id="@+id/lap_down_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignTop="@+id/time_pause"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:background="@drawable/menu_down"
            android:elevation="8dp"
            android:scaleType="fitXY"
            android:scaleX="1.5"
            android:scaleY="1.5" />
    </RelativeLayout>


</LinearLayout>