<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_blue_dark"
    tools:context=".clock.MLapFragment">

    <LinearLayout
        android:id="@+id/btn_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_rounded_corners"
            android:elevation="8dp"
            android:text="@string/reset"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/real_time_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_rounded_corners"
            android:elevation="8dp"
            android:text="@string/real_time"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:text="Lap Direction"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/lap_label_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/num_label"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="No."
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rep_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="# of Rep"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/interval_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="Interval"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <include layout="@layout/rep_interval_item" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTimeBackground">

        <TextView
            android:id="@+id/timeview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textSize="42sp"
            android:textStyle="bold"
            android:text="00:00.00"
            tools:text="0:28.25" />

        <TextView
            android:id="@+id/rep_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/time_pause"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:text="[1] - 1" />

        <Button
            android:id="@+id/time_pause"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_below="@+id/timeview"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:elevation="8dp"
            android:text="@string/pause"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>